# smart-drug-inventory

./: .clippy.toml  .gitignore  Cargo.toml  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build-windows.yml  rust-check.yml
crates/data-access/: Cargo.toml
crates/data-access/src/: database.rs  lib.rs  queries.rs
crates/kpi-core/: Cargo.toml
crates/kpi-core/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
docs/: cargo-workspace.md
scripts/: gen-icons.cjs
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  kpi.rs  lib.rs  queries.rs  settings.rs
src/api/: index.ts
src/assets/: main.css
src/assets/css/: animations.css  base.css  components.css  tokens.css  typography.css  utilities.css
src/components/: DosBar.vue  DrugTable.vue  FilterBar.vue  GradeRing.vue  StatCard.vue
src/router/: index.ts
src/stores/: inventory.ts
src/types/: index.ts
src/views/: Dashboard.vue  DrugDetail.vue  Settings.vue
supply-chain/: config.toml
