[package]
name = "one-pharm"
version = "0.1.0"
description = "Smart Drug Inventory — Desktop Analytics for INVS"
authors = ["rxdevman"]
license = "MIT"
repository = "https://github.com/suradet-ps/one-pharm"
edition = "2024"
rust-version = "1.85"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQL Server via TDS protocol (no ODBC driver needed)
tiberius = { version = "0.12", default-features = false, features = ["rustls", "chrono"] }

# TLS backend for tiberius
tokio-util = { version = "0.7", features = ["compat"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"

# Settings persistence
directories = "6"

# Async synchronization
once_cell = "1"

# Error handling
thiserror = "2"

# Connection pool (bb8 generic pool + tiberius adapter)
bb8 = "0.9"
bb8-tiberius = "0.16"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
