[package]
name = "one-pharm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/suradet-ps/one-pharm"
description = "Smart Drug Inventory — Desktop Analytics for INVS"
authors = ["rxdevman"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"

# Error handling
thiserror = "2"

# Workspace crates
kpi-core = { path = "../crates/kpi-core" }
settings = { path = "../crates/settings" }
data-access = { path = "../crates/data-access" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
